[tool.poetry]
name = "api-sys"
version = "0.1.0"
description = "API to query system info"
authors = ["John <mail@mrjohntan.com>"]
readme = "README.md"
packages = [{include = "api_sys"}]

[tool.poetry.dependencies]
python = "3.9.14"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
